# catimini

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: catimini-build.yml
catimini-tauri/: Cargo.toml
catimini-tauri/src/: commands.rs  lib.rs  state.rs
catimini-tauri/src/tests/: commands_tests.rs  mod.rs  state_tests.rs
catimini-ui/: .gitignore  Cargo.toml  index.html  package-lock.json  package.json  tauri.conf.json  tsconfig.json  vite.config.ts
catimini-ui/capabilities/: default.json
catimini-ui/src-node/: App.css  App.tsx  ImageViewer.css  ImageViewer.tsx  ResizablePanel.css  ResizablePanel.tsx  SelectableFileTree.css  SelectableFileTree.tsx  commands.tsx  utils.tsx
catimini-ui/src-node/tests/: ImageViewer.test.tsx  SelectableFileTree.test.tsx  setupTest.ts
catimini-ui/src-rust/: build.rs  cmdline.rs  main.rs
integration_tests/: package-lock.json  package.json  tsconfig.json  wdio.conf.ts
integration_tests/tests/: common.ts  filetree.test.ts  main.test.ts
