[workspace]

members = [
    "catimini-tauri",
    "catimini-ui"
]

resolver = "3"

[workspace.package]
version = "0.1.0"
authors = ["Julien Thierry"]
description = "A photo gallery application"
edition = "2024"
license = "MIT"

[workspace.dependencies]
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
tauri-plugin-opener = "2"

# Recommended settings
[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.
