[package]
name = "catimini-tauri"
version.workspace = true
description = "Tauri backend library for Catimini"
license.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri.workspace = true
tauri-plugin-opener.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25.0"

[dev-dependencies]
tempfile = "3.20.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(mobile)'] }
