[package]
name = "catimini-ui"
version.workspace = true
description.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
build = "src-rust/build.rs"

[[bin]]
name = "catimini-run"
path = "src-rust/main.rs"

[build-dependencies]
tauri-build.workspace = true
image = "0.25.0"

[dependencies]
tauri.workspace = true
catimini-tauri = { path = "../catimini-tauri" }
clap = { version = "4.5.42", features = ["derive"] }
